# perfmix-studio

./: .gitignore  README.md  confirm-success.html  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: GETTING_STARTED.md  WORKSPACE.md
fixtures/: oauth-mini.jmx
scripts/: download-k6-for-tauri.mjs
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/resources/k6/: README.md
src-tauri/src/: db.rs  lib.rs
src/api/: client.ts  dto.ts  mappers.ts  mockData.ts
src/app/: layout.tsx  routes.tsx
src/components/auth/: LoginPage.tsx  OtpDigitGroup.tsx  PasswordStrengthMeter.tsx  PhoneCountryInput.tsx  ResetPasswordPage.tsx
src/components/ui/: AppSelect.tsx  Card.tsx  KeyValueTable.tsx  Page.tsx  SimpleTable.tsx  ToastHost.tsx
src/desktop/: tauriBridge.ts
src/hooks/: useBootstrap.ts
src/k6/: generator.test.ts  generator.ts  summaryMetrics.ts  summaryPerRequest.ts
src/lib/: authValidation.test.ts  authValidation.ts  exportHtmlFile.ts  phoneCountries.ts  phoneValidation.test.ts  phoneValidation.ts  supabaseClient.ts
src/models/: types.ts
src/monaco/: setupMonaco.ts
src/pages/: pages.tsx
src/store/: appStore.ts  authStore.test.ts  authStore.ts  toastStore.ts
src/workspace/: WorkspaceApp.tsx  assertionRunner.ts  collectionIo.test.ts  collectionIo.ts  curlExport.ts  curlParse.ts  durationParse.ts  durationPresets.ts  harParse.ts  httpSend.ts  inferRequestBodyType.ts  jmeterJsr223PostShim.test.ts  jmeterJsr223PostShim.ts  jmxParse.authorization.test.ts  jmxParse.import.test.ts  jmxParse.ts  k6LoadDefaults.ts  k6ScriptRunnable.test.ts  k6ScriptRunnable.ts  oauthCodeRegex.ts  openApiParse.ts  pmMonacoTypes.ts  postmanParse.ts  resolveWorkspaceTemplates.test.ts  resolveWorkspaceTemplates.ts  runLabel.ts  workspaceCorrelationRuntime.correlation.test.ts  workspaceCorrelationRuntime.euumToken.test.ts  workspaceCorrelationRuntime.ts  workspaceHttpPipeline.ts
src/workspace/components/: BodyMonacoEditor.tsx  CommandPalette.tsx  PmScriptMonacoEditor.tsx  WorkspaceAssistantPanel.tsx  (+13 more)
supabase/: README.md
supabase/migrations/: 20260216120000_profiles_rls.sql  20260217140000_profiles_username_rpc.sql  20260218150000_profiles_phone.sql
(+2 files in other folders)
