[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = "https://github.com/ahmedmaged0a/perfmix-studio"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
once_cell = "1.21"
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
tauri-plugin-dialog = "2"
tokio = { version = "1.52.0", features = ["rt"] }
tauri-plugin-opener = "2"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[profile.dev]
debug = 0
incremental = false

[profile.dev.package.app]
debug = true

# Release `windows` / WebView stack needs several GB RAM to compile on Windows; these settings
# shrink peak memory (sequential LLVM, no incremental artifacts, lighter opt on the worst crate).
[profile.release]
incremental = false
codegen-units = 1
lto = false

[profile.release.package.windows]
opt-level = 1
codegen-units = 1
